Implementando a tela inicial e a tela de insctruções preliminares.

--- a/questionnaire/templates/masterquest/index.html
+++ b/questionnaire/templates/masterquest/index.html
@@ -11,27 +11,27 @@
     <div>
         <p>Code anomaly, so-called "code smell", is an implementation choice that indicates a deign problem which
             violates the well-known principles of cohesion, abstraction and separation of concerns on software
-            development.</p>
+            development.  </p> 
 
-        <p>There have been many studies proposing to automatically detect bad smells in code. Over the last years,
+        <p> Furthermore, there have been many studies proposing to automatically detect bad smells in code. Over the last years,
             Machine learning has been introduced as an important approach to detect code smells. For instance, the
             decision tree is a supervised classifier that has been addressed in many problems involving code smell
             detections, obtaining good effectivity. </p>
 
         <p>
-            The goal of this survey is to aid an empirical research that aims to evaluate how interpretable is a code
-            smell detection based on decision tree classifier . It'll test the perception of a participant about a specific code smell type, merged in a java code, and test this
+            The goal of this survey is to aid an empirical research that aims to test the agreement among developers upon 
+            certain "smely code", when 
+            . It'll test the perception of a participant about a specific code smell type, merged in a java code, and test this
             same perception after a feedback provided by a white box classifier - a decision tree classifier.
         </p>
 
-        <p>Answering the survey might take around XX minutes of your time. The results of the survey may be reported in
-            academic publications. If you have any questions
-            or concerns, please contact me (christianorossini@ic.ufal.br).</p>
+        <p><!-- Answering the survey might take around XX minutes of your time. --> The results of the survey may be reported in
+            academic publications. If you have any questions or concerns, please contact me.</p>
     </div>
 
     <div id="members">
         <p><strong>Ms Student:</strong> Christiano Rossini (christianorossini@ic.ufal.br)</p>
-        <p><strong>Advisor:</strong> Baldoino Fonseca</p>
+        <p><strong>Advisor:</strong> Baldoino Fonseca (baldoino@ic.ufal.br)</p>
     </div>
 
     <p>Welcome! Click below to enter!</p>
