Correção de bugs e melhorias

--- a/questionnaire/templates/masterquest/inc_survey_codeSnippet.html
+++ b/questionnaire/templates/masterquest/inc_survey_codeSnippet.html
@@ -5,8 +5,6 @@
     <h3>Java code</h3>
     
     <pre>
-        <code>    
-            {{task.codeSnippetContent}}
-        </code>
+        <code>{{task.codeSnippetContent}}</code>
     </pre>
 </div>
