alterações na home e em instruções

--- a/questionnaire/templates/masterquest/index.html
+++ b/questionnaire/templates/masterquest/index.html
@@ -8,7 +8,7 @@
 
     <h2 id="research-title">Research - Code smell detection aided by a decision tree classifier.</h2>
 
-    <div style="text-indent: 40px">
+    <div style="text-indent: 40px; text-align: justify">
         <p>Code anomaly, so-called "code smell", is an implementation choice that indicates a design problem that
             violates the well-known principles of cohesion, abstraction and separation of concerns on software
             development. </p>
