--- a/questionnaire/templates/masterquest/instructions.html
+++ b/questionnaire/templates/masterquest/instructions.html
@@ -6,11 +6,21 @@
     <h1>2 - Start up instructions</h1>
 
     <p>
-        The participant must accomplish {{numTasks}} different tasks, each one will have only a related code snippet. In others tasks
-        there will be, besides the code, a decision tree that will serve as a decision aid, or suggestion, to decision
-        making.
+        The participant must accomplish {{numTasks}} different tasks, each one with a related code snippet. The
+        accomplishment of a task will be done after answering 2 questions:
+        <dl>
+            <dt>What code smell type do you infer from code snippet?</dt>
+            <dd>
+                sdasdfds
+            </dd>
+            <dt>What's your confidence level about the chosen option above??</dt>
+            <dd>
+                
+            </dd>
+        </dl>
+        Half of the tasks will show a code snippet along with a desicion tree to .
     </p>
-   
+
 
 
 
