--- a/questionnaire/templates/masterquest/inc_survey_codeSnippet.html
+++ b/questionnaire/templates/masterquest/inc_survey_codeSnippet.html
@@ -2,9 +2,7 @@
 
 <div class="tab-pane show active" id="codeSnippetContent" role="tabpanel" aria-labelledby="codeSnippetContent-tab">
     
-    <h3>Java code</h3>
+    <h3 class="taskTittle">Java code</h3>
     
-    <pre>
-        <code>{{task.codeSnippetContent}}</code>
-    </pre>
+    <pre class="prettyprint linenums" id="javaCode"><code class="language-java">{{task.codeSnippetContent}}</code></pre>
 </div>
