--- a/questionnaire/templates/masterquest/inc_survey_cs_definition.html
+++ b/questionnaire/templates/masterquest/inc_survey_cs_definition.html
@@ -1,7 +1,7 @@
 {% load static %}
 
-<div class="alert alert-warning alert-dismissible fade show" role="alert">
-    The smell presented in the code is <strong>{{task.getCsDescription.0}}</strong> <br>
+<div class="alert alert-warning" role="alert" id="csDefinition">
+    The smell presented in the java code is <strong>{{task.getCsDescription.0}}</strong> <br>
 
     Definition: <strong>{{task.getCsDescription.1}}</strong>
 </div>
