--- a/questionnaire/templates/masterquest/instructions2.html
+++ b/questionnaire/templates/masterquest/instructions2.html
@@ -5,13 +5,12 @@
 <div class="container">
     <h1>2 - Start up instructions</h1>
 
-    <p>Warmup task concluded. 
-    </p>
+    <p>Warmup task for scenario 2: </p>
 
     <form action="{% url 'warmup2' participant_id=participant_id %}" method="POST">
         {% csrf_token %}
         <p class="text-center">
-            <input type="submit" class="btn btn-primary btn-lg" value="go to warmup 2">
+            <input type="submit" class="btn btn-primary btn-lg" value="go to warmup task 2">
         </p>
         <input type="hidden" value="{{participant_id}}" name="participant_id" />
     </form>
